fix wraphandled

--- a/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/AppErrorBoundary.razor.scss
+++ b/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/AppErrorBoundary.razor.scss
@@ -13,7 +13,3 @@ main {
     text-align: start;
     margin: rem2(24px);
 }
-
-.buttons {
-    margin-bottom: rem2(24px);
-}
